made small changes to index as test for git

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>shd</title>
+  <title>EAP</title>
 </head>
 <body>
 
-  <h1>shd app</h1>
+  <h1>EAP meme generator</h1>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
