--- a/index.html
+++ b/index.html
@@ -2,12 +2,32 @@
 <html>
 <head>
   <title>EAP</title>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/app.css">
+  <script type="text/javascript" src="scripts/app.js"></script>
+
+
 </head>
 <body>
 
-  <h1>EAP meme generator</h1>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
+
+ <h1> you bro this is a test </h1>
+
+ <canvas id="memecanvas" style="height:600; width:480;border:1px solid #000000;"> Sorry, canvas not supported </canvas>
+ <img id="memeImage" src='img/harper.jpg' style="height:600; width:480; display:none"/>
+ <input type='file' id='fileInput' />
+
+  Scale: <input id='scale' type='range' min='0.1' max='4' value='1' step='0.01' />
+  Rotate: <input id='rotate' type='range' min='-180' max='180' value='0' step='1' />
+
+ <input type='text' value='enter some text' id='custom-text' />
+
+
+
+  <a href='' id="img-download" download="mobiforge-canvas.png" >Download image</a>
+
 </body>
 </html>
+
